<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <!-- 메세지 헤더 -->
    <RelativeLayout
        android:id="@+id/message_header_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#784315"
        android:padding="8dp">

        <!-- 뒤로가기 버튼 -->
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/chat_header_back_btn"
            android:padding="8dp"
            android:src="@drawable/activity_chat_back_arrow" />

        <!-- 채팅방 제목 -->
        <TextView
            android:id="@+id/chat_room_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@id/search_button"
            android:layout_toEndOf="@id/back_button"
            android:contentDescription="@string/chat_room_title"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="채팅방 제목"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


        <!-- 돋보기 버튼 -->
        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/menu_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/chat_header_search_btn"
            android:padding="8dp"
            android:src="@drawable/activity_chat_search_ic" />


        <!-- 메시지 창 메뉴 버튼 -->
        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/chat_header_menu_btn"
            android:padding="8dp"
            android:src="@drawable/activity_chat_bars_ic" />
    </RelativeLayout>

    <!-- 검색창 화면 -->
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_header_layout"
        android:background="#784315"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/activity_chat_edit_text_background"
            android:hint="검색"
            android:inputType="text"
            android:padding="16dp" />

        <ImageButton
            android:id="@+id/search_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/activity_chat_circle_btn_1"
            android:contentDescription="@string/searchbtn"
            android:padding="10dp"
            android:src="@drawable/activity_chat_arrow_up2"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <!-- 채팅 메세지 창 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/input_layout"
        android:layout_below="@id/search_layout"
        android:background="#FFFFFF"
        android:padding="8dp"
        tools:listitem="@layout/custom_chat_msg" />

    <!-- 하단 입력 영역 -->
    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#D5D4D4"
        android:gravity="center_vertical"
        android:padding="8dp">

        <!-- + 버튼 -->
        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/activity_chat_circle_btn_2"
            android:contentDescription="@string/chat_add_photo"
            android:src="@drawable/activity_chat_add_btn" />

        <!-- 메시지 입력 -->
        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="username"
            android:background="@drawable/activity_chat_edit_text_background"
            android:hint="@string/text_message"
            android:inputType="text"
            android:padding="15dp" />

        <!-- 전송 버튼 -->
        <ImageButton
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/activity_chat_circle_btn_2"
            android:contentDescription="@string/chat_send_message"
            android:padding="10dp"
            android:src="@drawable/activity_chat_arrow_up2" />

    </LinearLayout>

</RelativeLayout>